<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hintUsername">Input your user name</string>
    <string name="hintPassword">Input your password</string>
    <string name="strLogin">Login</string>
    <string name="strRegister">Register</string>
    <string name="AR_for_advertising">AR for advertising</string>
    <string name="txtUsername">User name: </string>
    <string name="txtPassword">Password: </string>
    <string name="hintEmail">Input your email</string>
    <string name="hintFullname">Input your full name</string>
    <string name="strCancel">Cancel</string>
    <string name="txtRepassword">Re-password: </string>
    <string name="hintRepassword">Input password again</string>
    <string name="txtEmail">Email: </string>
    <string name="txtFullname">Full name: </string>
    <string name="txtYourEmail">Your email: </string>
    <string name="strReset">Reset password</string>
    <string name="title_activity_register">Activity Register</string>
    <string name="title_activity_reset_password">Reset password</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_activity_mission">MissionActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="txtNamePrograme">Name Programe: </string>
    <string name="txtStartDay">Start day: </string>
    <string name="txtEndDay">End day: </string>
    <string name="txtCompanyName">Company Name: </string>
    <string name="txtDescribe">Describe: </string>
    <string name="txtParticipate">Participate in </string>    
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_helper_target_default">HelperTargetDefaultActivity</string>
    <string name="title_activity_helper_target_gps">HelperTargetGPSActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_cheking_mission">ChekingMissionActivity</string>

</resources>
