<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
       	<TextView 
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:text="Register"
       	    android:gravity="center"
       	    android:textSize="30sp"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
                android:text="@string/txtUsername"/>
            <EditText
		        android:id="@+id/etUsername"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:freezesText="true"		
		        android:hint="@string/hintUsername"
		        android:paddingTop="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
                android:text="@string/txtPassword"/>
            <EditText
		        android:id="@+id/etPassword"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hintPassword"
		        android:inputType="textPassword"
		        android:paddingTop="20dp" />
        </TableRow>
		<TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
                android:text="@string/txtRepassword"/>
            <EditText
		        android:id="@+id/etRetypePassword"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hintRepassword"
		        android:inputType="textPassword"
		        android:paddingTop="20dp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
                android:text="@string/txtEmail"/>
            <EditText
		        android:id="@+id/etEmail"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hintEmail"
		        android:inputType="textEmailAddress"
		        android:paddingTop="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
                android:text="@string/txtFullname"/>
            <EditText
		        android:id="@+id/etFullname"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hintFullname"		        
		        android:paddingTop="20dp" />
        </TableRow>
    </TableLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
       	<Button
	        android:id="@+id/btnRegister"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right|center_vertical|center_horizontal"
	        android:text="@string/strRegister" />
       	<Button
	        android:id="@+id/btnCancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right|center_vertical|center_horizontal"
	        android:text="@string/strCancel" />
    </LinearLayout>
</LinearLayout>
