<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="35px">

    <ScrollView
        android:id="@+id/sc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView
		        android:id="@+id/txtName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/txtNamePrograme"
		        />
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <TextView
		        android:id="@+id/txtNumTarget"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="0/4 "
		     />

	        <ProgressBar
	            android:id="@+id/pBar"
	            style="?android:attr/progressBarStyleHorizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	            	            />		
	    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		        <TextView
			        android:id="@+id/txtStart"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/txtStartDay"
			     />
				<TextView
			        android:id="@+id/txtEnd"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/txtEndDay"
			    />
		    </LinearLayout>
		
			
		   <TextView
		        android:id="@+id/txtCompany"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/txtCompanyName"
		        />
			<TextView
		        android:id="@+id/txtDescription"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/txtDescribe"
		        />
        </LinearLayout>
    </ScrollView>

    

	
			<LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_gravity="center|center_horizontal" >

		        <Button
		            android:id="@+id/btnJoin"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"		            
		            android:text="@string/txtParticipate" />

				 <Button
				    android:id="@+id/btnScan"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/btnScan" 
				    android:layout_gravity="center"/>
		    </LinearLayout>
	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />

	<ListView
	    android:id="@+id/lvMission"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	</ListView>

</LinearLayout>
