<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|center_vertical|center_horizontal">	      
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ems="10"
                android:hint="@string/hintUsername" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.28"
                android:ems="10"
                android:hint="@string/hintPassword"
                android:inputType="textPassword" />
			<TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="0.0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#F20707" />
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center|center_vertical|center_horizontal">
			    
			    <Button
                    android:id="@+id/btnLogin"                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"   
                    android:layout_gravity="center_vertical"                 
                    android:text="@string/strLogin" />
			    <Button
                    android:id="@+id/btnRegister"                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    
                    android:text="@string/strRegister" />
			</LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="end" >
				<TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"  
                android:layout_gravity="bottom"              
                android:text="@string/AR_for_advertising"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>   
</LinearLayout>